# dialog-video-gen

./: .env.example  .gitignore  Dockerfile  ENVIRONMENT_CONFIG.md  README.md  curl.sh  entrypoint.sh  fly.toml  pyproject.toml  update-fly-secrets.sh
.cursor/rules/: application-layer.mdc  ddd-rules.mdc  domain-layer.mdc  infrastructure-layer.mdc  interfaces-layer.mdc
inputs/images/: stewie.png.example
src/application/: bootstrap.py  config.py
src/application/services/: __init__.py  data_preparation_service.py  file_management_service.py  video_production_service.py  video_retrieval_service.py
src/application/use_cases/: create_video_use_case.py
src/domain/entities/: __init__.py  alignment.py  character.py  dialogue.py  segment_boundary.py
src/domain/ports/: __init__.py  presigned_url.py  repositories.py  storage.py
src/domain/services/: __init__.py  audio_service.py  speaker_mapping_service.py
src/infrastructure/: video_generation.py
src/infrastructure/audio_processing/: generation.py
src/infrastructure/elevenlabs/: __init__.py  client.py
src/infrastructure/ffmpeg_wrapper/: __init__.py  binary_manager.py  command_executor.py  exceptions.py  factory.py  file_validator.py  interfaces.py  media_info_extractor.py  pipeline.py  video_processor.py
src/infrastructure/services/: character_repository.py  environment_service.py  file_processing_service.py  voice_config_service.py
src/infrastructure/storage/: __init__.py  factory.py  filesystem_storage.py  tigris_storage.py
src/infrastructure/subtitle_processing/: ass_generator.py  generation.py
(+2 files in other folders)
