[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "byteme"
version = "0.1.0"
description = "Byteme FastAPI service for generating videos"
authors = ["Byteme Team <devnull@example.com>"]
readme = "README.md"
# Disable packaging; treat this as an application, not a library
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
elevenlabs = "^2.5.0"
pydub = "^0.25.1"
pysubs2 = "^1.8.0"
boto3 = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
ruff = "^0.5.0"
